--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -170,7 +170,7 @@
         <div class="row" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Does the charitable organization provide a benefit or service to the community?<span style="color:red" >*</span>
+              Does the charitable/non-profit organization provide a benefit or service to the community?<span style="color:red" >*</span>
             </p>
             <mat-radio-group
               formControlName="charityProvidesCommunityBenefit"
@@ -185,7 +185,7 @@
         <div class="row" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Has the charitable organization been in existence for at least 12 months?<span style="color:red" >*</span>
+              Has the charitable/non-profit organization been in existence for at least 12 months?<span style="color:red" >*</span>
             </p>
             <mat-radio-group
               formControlName="charityExistsAtLeast12Months"
@@ -200,7 +200,7 @@
         <div class="row" *ngIf="isCharitableOrganization == true">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Is the charitable organization registered under the BC <i>Societies Act</i>?<span style="color:red" >*</span>
+              Is the charitable/non-profit organization registered under the BC <i>Societies Act</i>?<span style="color:red" >*</span>
             </p>
             <mat-radio-group
               formControlName="charityRegistered"
