--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
   <div class="col-12 content-container" >
     <div class="row">
         <div class="col-md-6">
-          <span class="page-subheadbold">This page is for homeowners, residential tenants, small businesses, farms, and charitable organizations.</span><br />
+          <span class="page-subheadbold">This page is for homeowners, residential tenants, small businesses, farms, and charitable/non-profit organizations.</span><br />
 If you're an Indigenous community or local government your process is different: <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa">DFA for community recovery.</a>
         </div>
       <div class="col-md-6"></div>
