--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -82,7 +82,7 @@
               </div>
 
               <button
-                *ngIf="!showFullTimeOccupantForm && (vieworedit === 'add' || vieworedit === 'update')"
+                *ngIf="!showFullTimeOccupantForm && (vieworedit === 'add' || vieworedit === 'update') && !hideOccupantButton"
                 class="family-button"
                 mat-button
                 type="button"
