--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -573,7 +573,7 @@
               </div>
 
               <button
-                *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly'"
+                *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly' && !hideOtherContactButton"
                 class="family-button"
                 mat-button
                 type="button"
