--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -153,6 +153,253 @@
 
       </ng-container>
     </form>
+    <form [formGroup]="otherContactsForm">
+      <div formGroupName="otherContact">
+        <ng-container>
+          <div class="row">
+            <div class="col-md-12">
+              <p class="sub-heading">
+                <b>Other Contact<span style="color:red" >*</span></b>
+              </p>
+              <p>
+                You must provide the name of one other contact person in case the DFA can't reach you. The Ministry of Emergency Management (EMCR) can't and won't speak with the contact
+                about your application. If you don't have an alternate contact, add your own name and contact details.
+              </p>
 
+              <table mat-table [dataSource]="otherContactsDataSource" *ngIf="otherContactsDataSource.getValue().length > 0">
+                <!-- Name Column -->
+                <ng-container matColumnDef="name" style="width:26%">
+                  <th mat-header-cell *matHeaderCellDef >
+                    <b>Name</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.firstName }}&nbsp; {{element.lastName }}
+                  </td>
+                </ng-container>
+
+                <!-- Phone Column -->
+                <ng-container matColumnDef="phoneNumber" style="width:27%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    <b>Phone</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.phoneNumber | phoneFormat }}
+                  </td>
+                </ng-container>
+
+                <!-- Email Column -->
+                <ng-container matColumnDef="email" style="width:27%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    <b>Email</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.email}}
+                  </td>
+                </ng-container>
+
+                <!-- Delete Icon Column -->
+                <ng-container matColumnDef="deleteIcon" style="width:20%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    &nbsp;
+                  </th>
+                  <td *matCellDef="let element; let index = index" mat-cell>
+                    <button
+                      class="edit-image"
+                      *ngIf="vieworedit !== 'viewOnly'"
+                      mat-icon-button
+                      aria-label="Edit"
+                      (click)="editOtherContactsRow(element, index)"
+                    >
+                      <img src="/assets/images/edit.svg" height="35" width="35" />
+                      <img
+                        src="/assets/images/edit_onhover.svg"
+                        height="35"
+                        width="35"
+                      />
+                    </button>&nbsp;
+                    <button
+                    class="delete-image"
+                    *ngIf="vieworedit !== 'viewOnly'"
+                    mat-icon-button
+                    aria-label="Remove"
+                    (click)="confirmDeleteOtherContactRow(index)"
+                  >
+                    <img src="/assets/images/delete.svg" height="35" width="35" />
+                    <img
+                      src="/assets/images/delete_onhover.svg"
+                      height="35"
+                      width="35"
+                    />
+                    </button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="otherContactsColumnsToDisplay"></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let element; columns: otherContactsColumnsToDisplay"
+                  class="example-element-row"
+                ></tr>
+
+              </table>
+
+              <div  *ngIf="otherContactsDataSource.getValue().length > 0">
+                <br /><br/>
+              </div>
+
+              <div *ngIf="otherContactsForm.get('otherContacts').invalid && otherContactsForm.get('otherContacts').hasError('required')">
+                <span style="color:red">At least one other contact is required.</span>
+              </div>
+
+              <button
+                *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly'"
+                class="family-button"
+                mat-button
+                type="button"
+                (click)="addOtherContact()"
+              >
+                + Add Other Contact
+              </button>
+
+              <mat-card *ngIf="showOtherContactForm">
+                <p class="sub-heading" style="font-size: 15px">
+                  {{otherContactText}}
+                </p>
+                <div class="row">
+                  <div class="col-md-3">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Contact first name</mat-label>
+                      <input formControlName="firstName" matInput placeholder="Contact first name" required maxlength="49"/>
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.firstName.invalid &&
+                          otherContactsForm.get('otherContact').controls.firstName.hasError('required') &&
+                          otherContactsForm.get('otherContact').controls.firstName.touched
+                        "
+                      >
+                        First Name is required</mat-error
+                      >
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.firstName.invalid &&
+                          otherContactsForm.get('otherContact').controls.firstName.hasError('maxLength')
+                        "
+                      >
+                        Maximum length is 49 characters</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-3">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Contact last name</mat-label>
+                      <input formControlName="lastName" matInput placeholder="Contact last name" required maxlength="49"/>
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.lastName.invalid &&
+                          otherContactsForm.get('otherContact').controls.lastName.hasError('required') &&
+                          otherContactsForm.get('otherContact').controls.lastName.touched
+                        "
+                      >
+                        Last Name is required</mat-error
+                      >
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.lastName.invalid &&
+                          otherContactsForm.get('otherContact').controls.lastName.hasError('maxLength')
+                        "
+                      >
+                        Maximum length is 49 characters</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-3">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Contact phone</mat-label>
+                      <input formControlName="phoneNumber"
+                        matInput
+                        required
+                        placeholder="Contact phone"
+                        [textMask]="{ mask: phoneMask, keepCharPositions: true }" />
+                        <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.phoneNumber.invalid &&
+                          otherContactsForm.get('otherContact').controls.phoneNumber.hasError('required') &&
+                          otherContactsForm.get('otherContact').controls.phoneNumber.touched
+                        "
+                      >
+                       Telephone number is required</mat-error
+                      >
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.phoneNumber.invalid &&
+                          otherContactsForm.get('otherContact').controls.phoneNumber.hasError('incorrectLength')
+                        "
+                      >
+                        Telephone number must have 10 digits</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-3">
+                    <mat-form-field appearance="outline">
+                      <mat-label>Contact email</mat-label>
+                      <input formControlName="email" required matInput placeholder="Contact email" type="email" maxlength="100" />
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.email.invalid &&
+                          otherContactsForm.get('otherContact').controls.email.hasError('required') &&
+                          otherContactsForm.get('otherContact').controls.email.touched
+                        "
+                      >
+                        Email is required</mat-error
+                      >
+                      <mat-error
+                      *ngIf="
+                        otherContactsForm.get('otherContact').controls.email.invalid
+                      "
+                    >
+                      Invalid email address</mat-error
+                    >
+                      <mat-error
+                        *ngIf="
+                          otherContactsForm.get('otherContact').controls.email.invalid &&
+                          otherContactsForm.get('otherContact').controls.email.hasError('maxLength')
+                        "
+                      >
+                        Maximum length is 100 characters</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-3">
+                    <button
+                      class="button-s details-button"
+                      mat-button
+                      type="button"
+                      (click)="cancelOtherContact()"
+                    >
+                      Cancel
+                    </button>
+                  </div>
+                  <div class="col-md-3">
+                    <button
+                      class="family-button details-button save-button"
+                      mat-button
+                      type="button"
+                      (click)="saveOtherContact()"
+                    >
+                      Save
+                    </button>
+                  </div>
+                </div>
+
+              </mat-card>
+
+            </div>
+          </div>
+        </ng-container>
+      </div>
+</form>
   </mat-card-content>
 </mat-card>
