--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.scss
@@ -19,7 +19,7 @@ mat-form-field {
 
 .horizontal-radio-group {
   display: flex; flex-direction: row;
-  margin: 15px 0;
+  margin: 0;
 }
 
 .topSpace{
