--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -23,7 +23,7 @@
         mat-stroked-button
         type="button"
         >
-         Save & Back to Dashboard
+         Back to Dashboard
          <app-loader
           [strokeWidth]="3"
           [diameter]="25"
