--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-profile/dfa-profile.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-profile/dfa-profile.component.html
@@ -1,10 +1,10 @@
 <br />
-<app-review
+<!--<app-review
   [type]="type"
   [showHeading]="false"
   [currentFlow]="currentFlow"
   [parentPageName]="parentPageName"
 >
-</app-review>
+</app-review>-->
 <br />
 <br />
