--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.html
@@ -3,20 +3,17 @@
     <div class="row">
       <div class="col-md-12">
         <span class="page-heading">
-          <b>{{
-            (formCreationService.personalDetailsForm$ | async)?.value?.lastName
-          }}</b
-          >,
-          {{
-            (formCreationService.personalDetailsForm$ | async)?.value?.firstName
-          }}
+          100 Mile Test community
           </span> <br />
       </div>
     </div>
   </div>
   <div class="col-12 content-container" >
     <div class="row">
-        <div class="col-md-6"></div>
+      <div class="col-md-6">
+        <span class="page-subheadbold">This page is for Indigenous communities or local governments.</span><br />
+            If you are a homeowner, residential tenant, small business, farm, or charitable organization your process is different: <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">DFA process for individuals, small businesses, farms, and charitable organizations.</a>
+      </div>
       <div class="col-md-6"></div>
       <div class="col-md-6">
         
@@ -41,7 +38,7 @@
       </div>
       <div class="col-md-6"></div>
     </div>
-    <div class="container" style="padding-bottom: 100px; padding-top: 30px;display: none;">
+    <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
       <!--<app-alert></app-alert>-->
 
       <nav mat-tab-nav-bar dynamicHeight>
