--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
@@ -6,7 +6,7 @@
     <br />You must submit an application within 90 days of the disaster event.
   </div>
   <div class="row" *ngFor="let eventItem of openDisasterEvents">
-    <mat-card class="mat-elevation-z4 content" style="padding-bottom: 20px; padding-top: 20px;">
+    <mat-card class="mat-elevation-z4 content" style="padding-bottom: 20px; padding-top: 20px;margin-bottom: 10px;">
       <div class="row">
         <div class="col-4">
           <span><b>Event Name:</b>&nbsp;&nbsp;{{eventItem.eventName == null ? "To Be Assigned" : eventItem.eventName }}</span>
@@ -51,7 +51,7 @@
       <div *ngIf="getEffectedRegionCommuntiesForEvent(eventItem.eventId).length == 0">
         <h2 style="text-align:center"><b>No Effected Communities</b></h2>
       </div>
-      <button mat-button type="button" class="button-p" (click)="checkEligibility()">Check Eligibility</button>
+      <button mat-button type="button" class="button-p">Check Eligibility</button>
     </mat-card>
   </div>
 </div>
