--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -233,6 +233,49 @@
           </div>
         </div><br/><br/>
 
+        <div class="row">
+          <div class="col-md-12 bottomspace">
+            <p class="sub-heading" style="font-size: 15px">
+              In the past, have you submitted a DFA application for the same property?<span style="color:red" >*</span>
+            </p>
+            <mat-radio-group
+              formControlName="previousApplication"
+              class="primary-radio-group horizontal-radio-group"
+              [disabled]="isReadOnly === true"
+              required
+              aria-label="Select an option">
+              <mat-radio-button
+                *ngFor="let option of radioOption"
+                class="primary-radio-button"
+                [value]="option"
+                (click)="OnSelectionPreviousApplication(option)"
+              >
+                {{ option }}
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+        </div>
+        <mat-form-field appearance="outline" [hidden]="propertyDamageForm.get('previousApplication').value !== 'Yes' && propertyDamageForm.get('previousApplication').value !== 'Not sure'" class="col-md-4 topSpace">
+          <mat-label>Please provide details about all the past applications(s), such as the date you applied, the name you applied under, and the outcome.</mat-label>
+          <input matInput
+            [required]="false"
+            type="text"
+            [readonly]="isReadOnly === true"
+            [disabled]="isReadOnly === true"
+            formControlName="previousApplicationText"
+            placeholder=""
+            maxlength="100"
+          />
+          <mat-hint>Maximum length is 100 characters</mat-hint>
+          <mat-error
+            *ngIf="
+              propertyDamageForm.get('previousApplicationText').invalid &&
+            propertyDamageForm.get('previousApplicationText').hasError('maxLength')
+            "
+          >
+            Maximum length is 100 characters</mat-error
+          >
+        </mat-form-field>
       </ng-container>
     </form>
 
