--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -170,7 +170,7 @@
           <div class="row">
             <div class="col-md-12">
               <p class="sub-heading">
-                <b>Other Contact</b>
+                <b>Other Contact</b><span style="color:red" >*</span>
               </p>
               <p>
                 You must provide the name of one other contact person in case the DFA can't reach you. The Ministry of Emergency Management (EMCR) can't and won't speak with the contact
